# Deep-Learning-Architecture-Cheatsheet

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: quickstart.md
scripts/: train_cifar10.sh
src/dlx/: __init__.py  registry.py  train.py
src/dlx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/dlx/data/: __init__.py
src/dlx/data/vision/: __init__.py  cifar10.py
src/dlx/models/: __init__.py
src/dlx/models/vision/: __init__.py  cnn_small.py
